feat: add bundlers test stack

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,25 @@ jobs:
       - name: Tests
         run: npm run test-ci
 
+  bundler:
+    name: Bundler test
+    needs: test
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        node-version: [16]
+    steps:
+      - uses: actions/checkout@v2.3.4
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2.4.1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Install
+        run: cd test/bundlers/rollup && npm i
+      - name: Tests
+        run: cd test/bundlers/rollup && npm run test
+
   automerge:
     needs: test
     runs-on: ubuntu-latest
