Make transport Jest-aware

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "docs": "docsify serve",
     "browser-test": "airtap --local 8080 test/browser*test.js",
     "lint": "eslint .",
-    "test": "npm run lint && tap test/*test.js test/*/*test.js && npm run test-types",
+    "test": "npm run lint && tap test/*test.js test/*/*test.js && jest test/jest && npm run test-types",
     "test-ci": "npm run lint && tap --no-check-coverage test/*test.js test/*/*test.js --coverage-report=lcovonly && npm run test-types",
     "test-ci-pnpm": "pnpm run lint && tap --no-coverage --no-check-coverage test/*test.js test/*/*test.js && pnpm run test-types",
     "test-ci-yarn-pnp": "yarn run lint && tap --no-check-coverage test/*test.js test/*/*test.js --coverage-report=lcovonly",
@@ -82,6 +82,7 @@
     "fastbench": "^1.0.1",
     "flush-write-stream": "^2.0.0",
     "import-fresh": "^3.2.1",
+    "jest": "^27.3.1",
     "log": "^6.0.0",
     "loglevel": "^1.6.7",
     "pino-pretty": "^v7.1.0",
