--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es6",
-    "lib": [ "es2015" ],
+    "lib": [ "es2015", "dom" ],
     "module": "commonjs",
     "noEmit": true,
     "strict": true,
