--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
   },
   "dependencies": {
     "fast-redact": "^3.0.0",
-    "fastify-warning": "^0.2.0",
+    "process-warning": "^1.0.0",
     "on-exit-leak-free": "^0.2.0",
     "pino-abstract-transport": "v0.5.0",
     "pino-std-serializers": "^4.0.0",
