--- a/.github/workflows/target-main.yml
+++ b/.github/workflows/target-main.yml
@@ -14,5 +14,5 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '⚠️ This pull request does not target the main branch.'
+              body: '⚠️ This pull request does not target the master branch.'
             })
