--- a/.github/workflows/target-main.yml
+++ b/.github/workflows/target-main.yml
@@ -1,10 +1,12 @@
+name: PR Target Check
+
 on:
   pull_request_target:
     types: [opened]
 
 jobs:
   comment:
-    if: ${{ github.base_ref }} != "master"
+    if: ${{ github.base_ref != "master" }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/github-script@v6
