test: add tests for ts code in transports (fails)
Most tests for ts integration pass, except for one I intend to fix in
following up commits.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "module": "commonjs",
     "noEmit": true,
     "strict": true,
+    "esModuleInterop": true,
   },
   "exclude": [
     "./test/types/*.test-d.ts",
