--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "pre-commit": "^1.2.2",
     "proxyquire": "^2.1.3",
     "pump": "^3.0.0",
+    "rimraf": "^3.0.2",
     "semver": "^7.0.0",
     "split2": "^4.0.0",
     "steed": "^1.1.3",
@@ -103,10 +104,10 @@
   },
   "dependencies": {
     "fast-redact": "^3.0.0",
-    "process-warning": "^1.0.0",
     "on-exit-leak-free": "^0.2.0",
     "pino-abstract-transport": "v0.5.0",
     "pino-std-serializers": "^4.0.0",
+    "process-warning": "^1.0.0",
     "quick-format-unescaped": "^4.0.3",
     "real-require": "^0.1.0",
     "safe-stable-stringify": "^2.1.0",
