--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "winston": "^3.3.3"
   },
   "dependencies": {
+    "atomic-sleep": "^1.0.0",
     "fast-redact": "^3.0.0",
     "on-exit-leak-free": "^0.2.0",
     "pino-abstract-transport": "v0.5.0",
