--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "docs": "docsify serve",
     "browser-test": "airtap --local 8080 test/browser*test.js",
     "lint": "eslint .",
-    "test": "npm run lint && tap && jest test/jest && npm run test-types",
-    "test-ci": "npm run lint && tap --no-check-coverage --coverage-report=lcovonly && npm run test-types",
-    "test-ci-pnpm": "pnpm run lint && tap --no-coverage --no-check-coverage && pnpm run test-types",
-    "test-ci-yarn-pnp": "yarn run lint && tap --no-check-coverage --coverage-report=lcovonly",
+    "test": "npm run lint && npm run transpile && tap --ts && jest test/jest && npm run test-types",
+    "test-ci": "npm run lint && npm run transpile && tap --ts --no-check-coverage --coverage-report=lcovonly && npm run test-types",
+    "test-ci-pnpm": "pnpm run lint && npm run transpile && tap --ts --no-coverage --no-check-coverage && pnpm run test-types",
+    "test-ci-yarn-pnp": "yarn run lint && npm run transpile && tap --ts --no-check-coverage --coverage-report=lcovonly",
     "test-types": "tsc && tsd && ts-node test/types/pino.ts",
-    "cov-ui": "tap --coverage-report=html",
+    "transpile": "node ./test/fixtures/ts/transpile.cjs",
+    "cov-ui": "tap --ts --coverage-report=html",
     "bench": "node benchmarks/utils/runbench all",
     "bench-basic": "node benchmarks/utils/runbench basic",
     "bench-object": "node benchmarks/utils/runbench object",
@@ -67,7 +68,9 @@
   },
   "homepage": "http://getpino.io",
   "devDependencies": {
+    "@types/flush-write-stream": "^1.0.0",
     "@types/node": "^17.0.0",
+    "@types/tap": "^15.0.6",
     "airtap": "4.0.4",
     "benchmark": "^2.1.4",
     "bole": "^4.0.0",
@@ -97,7 +100,7 @@
     "tap": "^16.0.0",
     "tape": "^5.0.0",
     "through2": "^4.0.0",
-    "ts-node": "^10.3.0",
+    "ts-node": "^10.7.0",
     "tsd": "^0.20.0",
     "typescript": "^4.4.4",
     "winston": "^3.3.3"
