--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -11,6 +11,9 @@ on:
         - 'docs/**'
         - '*.md'
 
+permissions:
+  contents: read
+
 jobs:
   benchmark_current:
     name: benchmark current
