fix(publishing): add preval pino version

--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "bench-child-child": "node benchmarks/utils/runbench child-child",
     "bench-child-creation": "node benchmarks/utils/runbench child-creation",
     "bench-formatters": "node benchmarks/utils/runbench formatters",
-    "update-bench-doc": "node benchmarks/utils/generate-benchmark-doc > docs/benchmarks.md"
+    "update-bench-doc": "node benchmarks/utils/generate-benchmark-doc > docs/benchmarks.md",
+    "prepare": "node ./lib/utils/preval-pino-version.js"
   },
   "bin": {
     "pino": "./bin.js"
