--- a/.github/workflows/lock-threads.yml
+++ b/.github/workflows/lock-threads.yml
@@ -16,7 +16,7 @@ jobs:
   action:
     runs-on: ubuntu-latest
     steps:
-      - uses: dessant/lock-threads@v3
+      - uses: jsumners/lock-threads@12c086eac738542b8bbe9d3c3f14e8d0b3b39bee
         with:
           log-output: true
           issue-inactive-days: '30'
