--- a/.github/workflows/lock-threads.yml
+++ b/.github/workflows/lock-threads.yml
@@ -5,9 +5,10 @@ on:
     - cron: '0 0 * * *'
   workflow_dispatch:
 
-permissions:
-  issues: write
-  pull-requests: write
+# Testing if permissions are breaking this workflow.
+# permissions:
+#   issues: write
+#   pull-requests: write
 
 concurrency:
   group: lock
