--- a/package.json
+++ b/package.json
@@ -70,18 +70,19 @@
   "homepage": "http://getpino.io",
   "devDependencies": {
     "@types/flush-write-stream": "^1.0.0",
-    "@types/node": "^17.0.0",
+    "@types/node": "^17.0.41",
     "@types/tap": "^15.0.6",
     "airtap": "4.0.4",
     "benchmark": "^2.1.4",
     "bole": "^4.0.0",
     "bunyan": "^1.8.14",
-    "docsify-cli": "^4.4.1",
-    "eslint": "^7.17.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.22.1",
+    "docsify-cli": "^4.4.4",
+    "eslint": "^8.17.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.2",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-promise": "^6.0.0",
     "execa": "^5.0.0",
     "fastbench": "^1.0.1",
     "flush-write-stream": "^2.0.0",
@@ -89,33 +90,33 @@
     "jest": "^28.1.0",
     "log": "^6.0.0",
     "loglevel": "^1.6.7",
-    "pino-pretty": "^v7.6.1",
+    "pino-pretty": "^8.0.0",
     "pre-commit": "^1.2.2",
     "proxyquire": "^2.1.3",
     "pump": "^3.0.0",
     "rimraf": "^3.0.2",
-    "semver": "^7.0.0",
+    "semver": "^7.3.7",
     "split2": "^4.0.0",
     "steed": "^1.1.3",
     "strip-ansi": "^6.0.0",
-    "tap": "^16.0.0",
-    "tape": "^5.0.0",
+    "tap": "^16.2.0",
+    "tape": "^5.5.3",
     "through2": "^4.0.0",
-    "ts-node": "^10.7.0",
+    "ts-node": "^10.8.1",
     "tsd": "^0.20.0",
-    "typescript": "^4.5.2",
-    "winston": "^3.3.3"
+    "typescript": "^4.7.3",
+    "winston": "^3.7.2"
   },
   "dependencies": {
     "atomic-sleep": "^1.0.0",
-    "fast-redact": "^3.0.0",
+    "fast-redact": "^3.1.1",
     "on-exit-leak-free": "^1.0.0",
     "pino-abstract-transport": "v0.5.0",
     "pino-std-serializers": "^5.0.0",
     "process-warning": "^2.0.0",
     "quick-format-unescaped": "^4.0.3",
     "real-require": "^0.1.0",
-    "safe-stable-stringify": "^2.1.0",
+    "safe-stable-stringify": "^2.3.1",
     "sonic-boom": "^3.0.0",
     "thread-stream": "^1.0.0"
   },
