ci: update workflows

--- a/.github/workflows/target-main.yml
+++ b/.github/workflows/target-main.yml
@@ -4,6 +4,9 @@ on:
   pull_request_target:
     types: [opened]
 
+permissions:
+  pull-requests: write
+
 jobs:
   comment:
     if: ${{ github.base_ref != "master" }}
