--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -23,10 +23,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: ${{ github.base_ref }}
+          persist-credentials: false
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: lts/*
       - name: Install Modules
         run: npm i
       - name: Run Benchmark
@@ -43,10 +44,12 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
+        with:
+          persist-credentials: false
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: lts/*
       - name: Install Modules
         run: npm i
       - name: Run Benchmark
