ci(bench): add `--ignore-scripts` to `npm install`

--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           node-version: lts/*
       - name: Install Modules
-        run: npm i
+        run: npm i --ignore-scripts
       - name: Run Benchmark
         run: npm run bench | tee current.txt
       - name: Upload Current Results
@@ -51,7 +51,7 @@ jobs:
         with:
           node-version: lts/*
       - name: Install Modules
-        run: npm i
+        run: npm i --ignore-scripts
       - name: Run Benchmark
         run: npm run bench | tee branch.txt
       - name: Upload Branch Results
