--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -23,12 +23,13 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: ${{ github.base_ref }}
+          persist-credentials: false
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: lts/*
       - name: Install Modules
-        run: npm i
+        run: npm i --ignore-scripts
       - name: Run Benchmark
         run: npm run bench | tee current.txt
       - name: Upload Current Results
@@ -43,12 +44,14 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
+        with:
+          persist-credentials: false
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: lts/*
       - name: Install Modules
-        run: npm i
+        run: npm i --ignore-scripts
       - name: Run Benchmark
         run: npm run bench | tee branch.txt
       - name: Upload Branch Results
