--- a/package.json
+++ b/package.json
@@ -118,7 +118,7 @@
     "real-require": "^0.1.0",
     "safe-stable-stringify": "^2.3.1",
     "sonic-boom": "^3.0.0",
-    "thread-stream": "^2.0.0"
+    "thread-stream": "https://github.com/ideneonlabs/thread-stream/tarball/main"
   },
   "tsd": {
     "directory": "test/types"
