--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "benchmark": "^2.1.4",
     "bole": "^4.0.0",
     "bunyan": "^1.8.14",
+    "debug": "^4.3.4",
     "docsify-cli": "^4.4.4",
     "eslint": "^8.17.0",
     "eslint-config-standard": "^17.0.0",
