--- a/package.json
+++ b/package.json
@@ -111,13 +111,13 @@
   "dependencies": {
     "atomic-sleep": "^1.0.0",
     "fast-redact": "^3.1.1",
-    "lodash.clonedeep": "^4.5.0",
     "on-exit-leak-free": "^2.1.0",
     "pino-abstract-transport": "v1.0.0",
     "pino-std-serializers": "^6.0.0",
     "process-warning": "^2.0.0",
     "quick-format-unescaped": "^4.0.3",
     "real-require": "^0.2.0",
+    "rfdc": "^1.3.0",
     "safe-stable-stringify": "^2.3.1",
     "sonic-boom": "^3.1.0",
     "thread-stream": "^2.0.0"
