Add Node 19 to the CI
Signed-off-by: Matteo Collina <hello@matteocollina.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [macOS-latest, windows-latest, ubuntu-latest]
-        node-version: [14, 16, 18]
+        node-version: [14, 16, 18, 19]
     steps:
       - name: Check out repo
         uses: actions/checkout@v3
