--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "docs": "docsify serve",
     "browser-test": "airtap --local 8080 test/browser*test.js",
     "lint": "eslint .",
+    "smoker": "npm exec smoker test-ci-smoke",
     "prepublishOnly": "tap --no-check-coverage test/internals/version.test.js",
     "test": "npm run lint && npm run transpile && tap --ts && jest test/jest && npm run test-types",
-    "test-ci": "npm run lint && npm run transpile && tap --ts --no-check-coverage --coverage-report=lcovonly && npm run test-types && npx midnight-smoker test-ci-smoke",
+    "test-ci": "npm run lint && npm run transpile && tap --ts --no-check-coverage --coverage-report=lcovonly && npm run test-types && npm run smoker",
     "test-ci-pnpm": "pnpm run lint && npm run transpile && tap --ts --no-coverage --no-check-coverage && pnpm run test-types",
     "test-ci-yarn-pnp": "yarn run lint && npm run transpile && tap --ts --no-check-coverage --coverage-report=lcovonly",
     "test-types": "tsc && tsd && ts-node test/types/pino.ts",
@@ -90,6 +91,7 @@
     "jest": "^29.0.3",
     "log": "^6.0.0",
     "loglevel": "^1.6.7",
+    "midnight-smoker": "^2.0.1",
     "pino-pretty": "^9.0.0",
     "pre-commit": "^1.2.2",
     "proxyquire": "^2.1.3",
