--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "test-ci-pnpm": "pnpm run lint && npm run transpile && tap --ts --no-coverage --no-check-coverage && pnpm run test-types",
     "test-ci-yarn-pnp": "yarn run lint && npm run transpile && tap --ts --no-check-coverage --coverage-report=lcovonly",
     "test-types": "tsc && tsd && ts-node test/types/pino.ts",
+    "test-ci-smoke": "node smoke.js",
     "transpile": "node ./test/fixtures/ts/transpile.cjs",
     "cov-ui": "tap --ts --coverage-report=html",
     "bench": "node benchmarks/utils/runbench all",
