--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "eslint": "^8.17.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^16.0.1",
+    "eslint-plugin-n": "15.7.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
     "execa": "^5.0.0",
@@ -82,7 +82,7 @@
     "jest": "^29.0.3",
     "log": "^6.0.0",
     "loglevel": "^1.6.7",
-    "midnight-smoker": "^2.0.1",
+    "midnight-smoker": "1.1.1",
     "pino-pretty": "^10.0.0",
     "pre-commit": "^1.2.2",
     "proxyquire": "^2.1.3",
