--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [macOS-latest, windows-latest, ubuntu-latest]
-        node-version: [14, 16, 18, 19, 20]
+        node-version: [14, 16, 18, 19, 20, 21]
         exclude:
           - os: windows-latest
             node-version: 14
