--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
     "tape": "^5.5.3",
     "through2": "^4.0.0",
     "ts-node": "^10.9.1",
-    "tsd": "^0.24.1",
+    "tsd": "^0.29.0",
     "typescript": "^5.1.3",
     "winston": "^3.7.2"
   },
@@ -115,5 +115,6 @@
   },
   "tsd": {
     "directory": "test/types"
-  }
+  },
+  "packageManager": "yarn@1.22.19"
 }
