--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "types": "pino.d.ts",
   "browser": "./browser.js",
   "scripts": {
+    "t": "jest test/jest",
     "docs": "docsify serve",
     "browser-test": "airtap --local 8080 test/browser*test.js",
     "lint": "eslint .",
@@ -89,7 +90,6 @@
     "pump": "^3.0.0",
     "rimraf": "^5.0.1",
     "semver": "^7.3.7",
-    "split2": "^4.0.0",
     "steed": "^1.1.3",
     "strip-ansi": "^6.0.0",
     "tap": "^16.2.0",
@@ -111,6 +111,7 @@
     "real-require": "^0.2.0",
     "safe-stable-stringify": "^2.3.1",
     "sonic-boom": "^3.7.0",
+    "split2": "^4.2.0",
     "thread-stream": "^2.0.0"
   },
   "tsd": {
