add node v22 to CI (#1953)
* add node v22 to CI

Signed-off-by: Matteo Collina <hello@matteocollina.com>

* Update ci.yml

Co-authored-by: James Sumners <321201+jsumners@users.noreply.github.com>

* fixup

Signed-off-by: Matteo Collina <hello@matteocollina.com>

---------

Signed-off-by: Matteo Collina <hello@matteocollina.com>
Co-authored-by: James Sumners <321201+jsumners@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,10 @@ jobs:
       fail-fast: false
       matrix:
         os: [macOS-latest, windows-latest, ubuntu-latest]
-        node-version: [18, 20, 21]
+        node-version: [18, 20, 22]
+      exclude:
+        - os: windows-latest
+          node-version: 22
 
     steps:
       - name: Check out repo
