--- a/package.json
+++ b/package.json
@@ -58,6 +58,9 @@
   "bugs": {
     "url": "https://github.com/pinojs/pino/issues"
   },
+  "engines": {
+    "node": "^18 || >=20"
+  },
   "homepage": "https://getpino.io",
   "devDependencies": {
     "@types/flush-write-stream": "^1.0.0",
@@ -73,7 +76,7 @@
     "eslint": "^8.17.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "15.7.0",
+    "eslint-plugin-n": "17.9.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
     "execa": "^5.0.0",
