fix: update prepublishOnly and test scripts to use borp

--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
     "docs": "docsify serve",
     "browser-test": "airtap --local 8080 test/browser*test.js",
     "lint": "eslint .",
-    "prepublishOnly": "tap --no-check-coverage test/internals/version.test.js",
+    "prepublishOnly": "borp --pattern 'test/internals/version.test.js'",
     "test": "npm run lint && npm run transpile && borp && jest test/jest && npm run test-types",
-    "test-ci": "npm run lint && npm run transpile && borp --no-check-coverage --coverage-report=lcovonly && npm run test-types",
-    "test-ci-pnpm": "pnpm run lint && npm run transpile && borp --no-coverage --no-check-coverage && pnpm run test-types",
-    "test-ci-yarn-pnp": "yarn run lint && npm run transpile && borp --no-check-coverage --coverage-report=lcovonly",
+    "test-ci": "npm run lint && npm run transpile && borp && npm run test-types",
+    "test-ci-pnpm": "pnpm run lint && npm run transpile && borp && pnpm run test-types",
+    "test-ci-yarn-pnp": "yarn run lint && npm run transpile && borp",
     "test-types": "tsc && tsd && ts-node test/types/pino.ts",
     "test:smoke": "smoker smoke:pino && smoker smoke:browser && smoker smoke:file",
     "smoke:pino": "node ./pino.js",
     "smoke:browser": "node ./browser.js",
     "smoke:file": "node ./file.js",
     "transpile": "node ./test/fixtures/ts/transpile.cjs",
-    "cov-ui": "borp --coverage-report=html",
+    "cov-ui": "borp",
     "bench": "node benchmarks/utils/runbench all",
     "bench-basic": "node benchmarks/utils/runbench basic",
     "bench-object": "node benchmarks/utils/runbench object",
