--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "smoke:browser": "node ./browser.js",
     "smoke:file": "node ./file.js",
     "transpile": "node ./test/fixtures/ts/transpile.cjs",
-    "cov-ui": "borp --timeout 40000",
+    "cov-ui": "c8 --reporter html borp --timeout 40000",
     "bench": "node benchmarks/utils/runbench all",
     "bench-basic": "node benchmarks/utils/runbench basic",
     "bench-object": "node benchmarks/utils/runbench object",
@@ -70,6 +70,7 @@
     "bole": "^5.0.5",
     "borp": "^0.19.0",
     "bunyan": "^1.8.14",
+    "c8": "^10.1.3",
     "debug": "^4.3.4",
     "docsify-cli": "^4.4.4",
     "eslint": "^8.17.0",
