--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "docs": "docsify serve",
     "browser-test": "airtap --local 8080 test/browser*test.js",
     "lint": "eslint .",
-    "prepublishOnly": "borp --pattern 'test/internals/version.test.js'",
+    "prepublishOnly": "borp 'test/internals/version.test.js' '!test/**/*.test.js'",
     "test": "npm run lint && npm run transpile && borp --timeout 40000 && jest test/jest && npm run test-types",
     "test-ci": "npm run lint && npm run transpile && borp --timeout 40000 && npm run test-types",
     "test-ci-pnpm": "pnpm run lint && npm run transpile && borp --timeout 40000 && pnpm run test-types",
