--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
     "docs": "docsify serve",
     "browser-test": "airtap --local 8080 test/browser*test.js",
     "lint": "eslint .",
-    "prepublishOnly": "tap --no-check-coverage test/internals/version.test.js",
-    "test": "npm run lint && npm run transpile && tap --ts && jest test/jest && npm run test-types",
-    "test-ci": "npm run lint && npm run transpile && tap --ts --no-check-coverage --coverage-report=lcovonly && npm run test-types",
-    "test-ci-pnpm": "pnpm run lint && npm run transpile && tap --ts --no-coverage --no-check-coverage && pnpm run test-types",
-    "test-ci-yarn-pnp": "yarn run lint && npm run transpile && tap --ts --no-check-coverage --coverage-report=lcovonly",
+    "prepublishOnly": "borp 'test/internals/version.test.js' '!test/**/*.test.js'",
+    "test": "npm run lint && npm run transpile && borp --timeout 50000 && jest test/jest && npm run test-types",
+    "test-ci": "npm run lint && npm run transpile && borp --timeout 50000 && npm run test-types",
+    "test-ci-pnpm": "pnpm run lint && npm run transpile && borp --timeout 50000 && pnpm run test-types",
+    "test-ci-yarn-pnp": "yarn run lint && npm run transpile && borp --timeout 50000",
     "test-types": "tsc && tsd && ts-node test/types/pino.ts",
     "test:smoke": "smoker smoke:pino && smoker smoke:browser && smoker smoke:file",
     "smoke:pino": "node ./pino.js",
     "smoke:browser": "node ./browser.js",
     "smoke:file": "node ./file.js",
     "transpile": "node ./test/fixtures/ts/transpile.cjs",
-    "cov-ui": "tap --ts --coverage-report=html",
+    "cov-ui": "c8 --reporter html borp --timeout 50000",
     "bench": "node benchmarks/utils/runbench all",
     "bench-basic": "node benchmarks/utils/runbench basic",
     "bench-object": "node benchmarks/utils/runbench object",
@@ -60,6 +60,7 @@
   },
   "homepage": "https://getpino.io",
   "devDependencies": {
+    "@jsumners/line-reporter": "^1.0.1",
     "@types/flush-write-stream": "^1.0.0",
     "@types/node": "^22.0.0",
     "@types/tap": "^15.0.6",
@@ -67,7 +68,9 @@
     "airtap": "5.0.0",
     "benchmark": "^2.1.4",
     "bole": "^5.0.5",
+    "borp": "^0.19.0",
     "bunyan": "^1.8.14",
+    "c8": "^10.1.3",
     "debug": "^4.3.4",
     "docsify-cli": "^4.4.4",
     "eslint": "^8.17.0",
