--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "borp": "^0.19.0",
     "bunyan": "^1.8.14",
     "c8": "^10.1.3",
+    "cjs-mock": "^1.4.15",
     "debug": "^4.3.4",
     "docsify-cli": "^4.4.4",
     "eslint": "^8.17.0",
