--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "commonjs",
   "types": "pino.d.ts",
   "browser": "./browser.js",
+  "files": ["*.js", "*.d.ts", "lib"],
   "scripts": {
     "docs": "docsify serve",
     "browser-test": "airtap --local 8080 test/browser*test.js",
