replace fast-redact with slow-redact

--- a/package.json
+++ b/package.json
@@ -104,7 +104,6 @@
   },
   "dependencies": {
     "atomic-sleep": "^1.0.0",
-    "fast-redact": "^3.1.1",
     "on-exit-leak-free": "^2.1.0",
     "pino-abstract-transport": "^2.0.0",
     "pino-std-serializers": "^7.0.0",
@@ -112,6 +111,7 @@
     "quick-format-unescaped": "^4.0.3",
     "real-require": "^0.2.0",
     "safe-stable-stringify": "^2.3.1",
+    "slow-redact": "^0.2.0",
     "sonic-boom": "^4.0.1",
     "thread-stream": "^3.0.0"
   },
