--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
   "types": "pino.d.ts",
   "browser": "./browser.js",
   "scripts": {
+    "borp": "borp --timeout 60000 --coverage --check-coverage --lines 95 --functions 95 --branches 95 --statements 95",
     "docs": "docsify serve",
     "browser-test": "airtap --local 8080 test/browser*test.js",
     "lint": "eslint .",
-    "prepublishOnly": "tap --no-check-coverage test/internals/version.test.js",
-    "test": "npm run lint && npm run transpile && tap --ts && jest test/jest && npm run test-types",
-    "test-ci": "npm run lint && npm run transpile && tap --ts --no-check-coverage --coverage-report=lcovonly && npm run test-types",
-    "test-ci-pnpm": "pnpm run lint && npm run transpile && tap --ts --no-coverage --no-check-coverage && pnpm run test-types",
-    "test-ci-yarn-pnp": "yarn run lint && npm run transpile && tap --ts --no-check-coverage --coverage-report=lcovonly",
+    "prepublishOnly": "node test/internals/version.test.js",
+    "test": "npm run lint && npm run transpile && npm run borp && jest test/jest && npm run test-types",
+    "test-ci": "npm run lint && npm run transpile && npm run borp && npm run test-types",
+    "test-ci-pnpm": "pnpm run lint && npm run transpile && borp --timeout 60000 && pnpm run test-types",
+    "test-ci-yarn-pnp": "yarn run lint && npm run transpile && borp --timeout 60000",
     "test-types": "tsc && tsd && ts-node test/types/pino.ts && attw --pack .",
     "test:smoke": "smoker smoke:pino && smoker smoke:browser && smoker smoke:file",
     "smoke:pino": "node ./pino.js",
@@ -64,10 +65,10 @@
     "@matteo.collina/tspl": "^0.2.0",
     "@types/flush-write-stream": "^1.0.0",
     "@types/node": "^24.0.8",
-    "@types/tap": "^15.0.6",
-    "@yao-pkg/pkg": "6.7.0",
+    "@yao-pkg/pkg": "6.3.0",
     "airtap": "5.0.0",
     "bole": "^5.0.5",
+    "borp": "^0.20.2",
     "bunyan": "^1.8.14",
     "debug": "^4.3.4",
     "docsify-cli": "^4.4.4",
@@ -94,7 +95,6 @@
     "split2": "^4.0.0",
     "steed": "^1.1.3",
     "strip-ansi": "^6.0.0",
-    "tap": "^16.2.0",
     "tape": "^5.5.3",
     "through2": "^4.0.0",
     "ts-node": "^10.9.1",
