chore: update slow-redact to 0.3.1 with fix for issue #2313

--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
     "quick-format-unescaped": "^4.0.3",
     "real-require": "^0.2.0",
     "safe-stable-stringify": "^2.3.1",
-    "slow-redact": "github:pinojs/slow-redact#fix-censor-undefined-paths",
+    "slow-redact": "^0.3.1",
     "sonic-boom": "^4.0.1",
     "thread-stream": "^3.0.0"
   },
