chore(lint): migrate from standard to neostandard & upgrade eslint to v9

--- a/package.json
+++ b/package.json
@@ -71,8 +71,7 @@
     "bunyan": "^1.8.14",
     "debug": "^4.3.4",
     "docsify-cli": "^4.4.4",
-    "eslint": "^8.17.0",
-    "eslint-config-standard": "^17.0.0",
+    "eslint": "^9.37.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "15.7.0",
     "eslint-plugin-node": "^11.1.0",
@@ -85,6 +84,7 @@
     "log": "^6.0.0",
     "loglevel": "^1.6.7",
     "midnight-smoker": "1.1.1",
+    "neostandard": "^0.12.2",
     "pino-pretty": "^13.0.0",
     "pre-commit": "^1.2.2",
     "proxyquire": "^2.1.3",
