--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "pump": "^3.0.0",
     "rimraf": "^6.0.1",
     "semver": "^7.3.7",
+    "sinon": "^21.0.0",
     "split2": "^4.0.0",
     "steed": "^1.1.3",
     "strip-ansi": "^6.0.0",
