--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [macOS-latest, windows-latest, ubuntu-latest]
-        node-version: [20, 22, 24]
+        node-version: [20, 22, 24, 25]
         exclude:
           - os: windows-latest
             node-version: 22
