--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "borp": "borp --timeout 60000 --coverage --check-coverage --lines 95 --functions 95 --branches 95 --statements 95",
     "docs": "docsify serve",
     "browser-test": "airtap --local 8080 test/browser*test.js",
-    "lint": "eslint .",
+    "lint": "eslint --cache .",
     "prepublishOnly": "node test/internals/version.test.js",
     "test": "npm run lint && npm run transpile && npm run borp && jest test/jest && npm run test-types",
     "test-ci": "npm run lint && npm run transpile && npm run borp && npm run test-types",
