--- a/tstyche.config.json
+++ b/tstyche.config.json
@@ -1,4 +1,4 @@
 {
 	"$schema": "https://tstyche.org/schemas/config.json",
-	"testFileMatch": ["test/types/*"]
+	"testFileMatch": ["test/types/*.{cts,ts}"]
 }
